fix alignments

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -1,7 +1,7 @@
 #root {
   max-width: full;
   margin: 0 auto;
-  padding: 2rem;
+
   text-align: center;
   font-family: 'Josefin Sans', sans-serif;
 }
